Pridani Bootstrap css + header + footer components

--- a/frontend/todo/src/app/app.component.html
+++ b/frontend/todo/src/app/app.component.html
@@ -2,10 +2,8 @@
 <!-- <app-second-welcome></app-second-welcome> -->
 <!-- <app-login></app-login> -->
 
-Todo Application Header/Menu (AppComponent)
-<br />
+<app-menu></app-menu>
 
 <router-outlet></router-outlet>
 
-<br />
-Todo Application Footer (AppComponent)
+<app-footer></app-footer>
