--- a/frontend/todo/src/app/welcome/welcome.component.html
+++ b/frontend/todo/src/app/welcome/welcome.component.html
@@ -1,10 +1,10 @@
-<div>
-  <p>Hello {{ name }}!</p>
+<h1>Welcome!</h1>
 
-  Welcome to our awesome App!
-</div>
+<div class="container">
+  <div>Hello {{ name }}! Welcome to our awesome App!</div>
 
-<div>
-  You can manage your todos
-  <a routerLink="/todos">here</a>.
+  <div>
+    You can manage your todos
+    <a routerLink="/todos">here</a>.
+  </div>
 </div>
