--- a/frontend/todo/src/app/footer/footer.component.html
+++ b/frontend/todo/src/app/footer/footer.component.html
@@ -1,2 +1,7 @@
-<BR /><BR />
-FOOTER
+<footer class="footer">
+  <div class="container">
+    <span class="text-muted"
+      >All Rights Reserved 2020 4Sight Trading s.r.o.</span
+    >
+  </div>
+</footer>
