Service pro Authentication - hardcoded

--- a/frontend/todo/src/app/menu/menu.component.html
+++ b/frontend/todo/src/app/menu/menu.component.html
@@ -1,17 +1,17 @@
 <header>
   <!-- bg je background -->
   <nav class="navbar navbar-expand-md navbar-dark bg-dark">
-    <div><a href="" class="navbar-brand">My Todo App</a></div>
+    <div><a routerLink="" class="navbar-brand">My Todo App</a></div>
 
     <ul class="navbar-nav">
-      <li><a href="/welcome/Mike" class="nav-link">Home</a></li>
-      <li><a href="/todos" class="nav-link">Todos</a></li>
+      <li><a routerLink="/welcome/Mike" class="nav-link">Home</a></li>
+      <li><a routerLink="/todos" class="nav-link">Todos</a></li>
     </ul>
 
     <!-- justify-content-end -> premisti login a logout na pravou stranu stranky -->
     <ul class="navbar-nav navbar-collapse justify-content-end">
-      <li><a href="/login" class="nav-link">Login</a></li>
-      <li><a href="/logout" class="nav-link">Logout</a></li>
+      <li><a routerLink="/login" class="nav-link">Login</a></li>
+      <li><a routerLink="/logout" class="nav-link">Logout</a></li>
     </ul>
   </nav>
 </header>
