--- a/frontend/todo/src/app/menu/menu.component.html
+++ b/frontend/todo/src/app/menu/menu.component.html
@@ -4,14 +4,42 @@
     <div><a routerLink="" class="navbar-brand">My Todo App</a></div>
 
     <ul class="navbar-nav">
-      <li><a routerLink="/welcome/Mike" class="nav-link">Home</a></li>
-      <li><a routerLink="/todos" class="nav-link">Todos</a></li>
+      <li>
+        <a
+          *ngIf="this.hardcodedAuthService.isUserLoggedIn()"
+          routerLink="/welcome/Mike"
+          class="nav-link"
+          >Home</a
+        >
+      </li>
+      <li>
+        <a
+          *ngIf="this.hardcodedAuthService.isUserLoggedIn()"
+          routerLink="/todos"
+          class="nav-link"
+          >Todos</a
+        >
+      </li>
     </ul>
 
     <!-- justify-content-end -> premisti login a logout na pravou stranu stranky -->
     <ul class="navbar-nav navbar-collapse justify-content-end">
-      <li><a routerLink="/login" class="nav-link">Login</a></li>
-      <li><a routerLink="/logout" class="nav-link">Logout</a></li>
+      <li>
+        <a
+          *ngIf="!this.hardcodedAuthService.isUserLoggedIn()"
+          routerLink="/login"
+          class="nav-link"
+          >Login</a
+        >
+      </li>
+      <li>
+        <a
+          *ngIf="this.hardcodedAuthService.isUserLoggedIn()"
+          routerLink="/logout"
+          class="nav-link"
+          >Logout</a
+        >
+      </li>
     </ul>
   </nav>
 </header>
