Welcome message with parametr 'name'

--- a/frontend/todo/src/app/welcome/welcome.component.html
+++ b/frontend/todo/src/app/welcome/welcome.component.html
@@ -16,6 +16,18 @@
   </button>
 </div>
 
+<div class="container">
+  Click here to get a customize Welcome with name
+  <button class="btn btn-success" (click)="getWelcomeMessageWithName()">
+    Get Welcome Message with name
+  </button>
+</div>
+
+<div class="container" *ngIf="welcomeErrorMessageFromService">
+  <h2>Error</h2>
+  {{ welcomeErrorMessageFromService }}
+</div>
+
 <div class="container" *ngIf="welcomeMessageFromService">
   <h2>Your Customized Welcome Message</h2>
   {{ welcomeMessageFromService }}
