--- a/frontend/todo/src/app/list-todos/list-todos.component.html
+++ b/frontend/todo/src/app/list-todos/list-todos.component.html
@@ -1,5 +1,7 @@
 <h1>My Todo's</h1>
 
+<div class="alert alert-success" *ngIf="message">{{ message }}</div>
+
 <div class="container">
   <table class="table">
     <thead>
@@ -7,6 +9,8 @@
         <th>Description</th>
         <th>Target Date</th>
         <th>is Completed</th>
+        <th>Update</th>
+        <th>Delete</th>
       </tr>
     </thead>
     <tbody>
@@ -14,6 +18,16 @@
         <td>{{ todo.description }}</td>
         <td>{{ todo.targetDate | date }}</td>
         <td>{{ todo.done }}</td>
+        <td>
+          <button class="btn btn-success" (click)="updateTodo(todo.id)">
+            Update
+          </button>
+        </td>
+        <td>
+          <button class="btn btn-warning" (click)="deleteTodo(todo.id)">
+            Delete
+          </button>
+        </td>
       </tr>
     </tbody>
   </table>
