--- a/frontend/todo/src/app/list-todos/list-todos.component.html
+++ b/frontend/todo/src/app/list-todos/list-todos.component.html
@@ -31,4 +31,7 @@
       </tr>
     </tbody>
   </table>
+  <div class="row">
+    <button class="btn btn-success" (click)="addTodo()">Add</button>
+  </div>
 </div>
