--- a/frontend/todo/src/app/login/login.component.html
+++ b/frontend/todo/src/app/login/login.component.html
@@ -9,7 +9,9 @@
     Password:
     <input type="password" name="password" formControlName="password" />
 
-    <button class="btn btn-success" (click)="handleLogin()">Login</button>
+    <button class="btn btn-success" (click)="handleBasicAuthLogin()">
+      Login
+    </button>
   </form>
 </div>
 
