--- a/frontend/todo/src/app/menu/menu.component.html
+++ b/frontend/todo/src/app/menu/menu.component.html
@@ -6,15 +6,15 @@
     <ul class="navbar-nav">
       <li>
         <a
-          *ngIf="this.hardcodedAuthService.isUserLoggedIn()"
-          routerLink="/welcome/Mike"
+          *ngIf="basicAuthenticationService.isUserLoggedIn()"
+          routerLink="/welcome/${user}"
           class="nav-link"
           >Home</a
         >
       </li>
       <li>
         <a
-          *ngIf="this.hardcodedAuthService.isUserLoggedIn()"
+          *ngIf="basicAuthenticationService.isUserLoggedIn()"
           routerLink="/todos"
           class="nav-link"
           >Todos</a
@@ -26,7 +26,7 @@
     <ul class="navbar-nav navbar-collapse justify-content-end">
       <li>
         <a
-          *ngIf="!this.hardcodedAuthService.isUserLoggedIn()"
+          *ngIf="!basicAuthenticationService.isUserLoggedIn()"
           routerLink="/login"
           class="nav-link"
           >Login</a
@@ -34,7 +34,7 @@
       </li>
       <li>
         <a
-          *ngIf="this.hardcodedAuthService.isUserLoggedIn()"
+          *ngIf="basicAuthenticationService.isUserLoggedIn()"
           routerLink="/logout"
           class="nav-link"
           >Logout</a
