Konstanta API_URL, AUTHENTICATED_USER, TOKEN + implementace + celkove vycisteni kodu

--- a/frontend/todo/src/app/welcome/welcome.component.html
+++ b/frontend/todo/src/app/welcome/welcome.component.html
@@ -10,16 +10,9 @@
 </div>
 
 <div class="container">
-  Click here to get a customize Welcome
-  <button class="btn btn-success" (click)="getWelcomeMessage()">
-    Get Welcome Message
-  </button>
-</div>
-
-<div class="container">
-  Click here to get a customize Welcome with name
+  Click here to get a customize welcome message
   <button class="btn btn-success" (click)="getWelcomeMessageWithName()">
-    Get Welcome Message with name
+    Get Welcome Message
   </button>
 </div>
 
