--- a/frontend/todo/src/app/todo/todo.component.html
+++ b/frontend/todo/src/app/todo/todo.component.html
@@ -26,7 +26,7 @@
     <button class="btn btn-success" type="submit">
       Save
     </button>
-    <button class="btn btn-default" (click)="onCancel()">
+    <button class="btn btn-default" type="button" (click)="onCancel()">
       Cancel
     </button>
   </form>
