ANGULAR MATERIAL: ng add @angular/material

--- a/frontend/todo/src/styles.css
+++ b/frontend/todo/src/styles.css
@@ -9330,3 +9330,6 @@ a.text-dark:focus {
   }
 }
 /*# sourceMappingURL=bootstrap.css.map */
+
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
