--- a/frontend/todo/src/app/todo/dialog/todo-dialog/todo-dialog.component.html
+++ b/frontend/todo/src/app/todo/dialog/todo-dialog/todo-dialog.component.html
@@ -9,7 +9,7 @@
         class="form-control"
         type="test"
         name="title"
-        formControlName="description"
+        formControlName="title"
       />
     </fieldset>
     <fieldset class="form-group col-md-6">
@@ -25,12 +25,12 @@
   <div class="row">
     <fieldset class="form-group col-md-12">
       <label>Description</label>
-      <input
+      <textarea
         class="form-control"
         type="text-area"
         name="description"
         formControlName="description"
-      />
+      ></textarea>
     </fieldset>
   </div>
 
