--- a/frontend/todo/src/app/todo/dialog/todo-dialog/todo-dialog.component.html
+++ b/frontend/todo/src/app/todo/dialog/todo-dialog/todo-dialog.component.html
@@ -1,4 +1,4 @@
-<h2 mat-dialog-title>Mat dialog title</h2>
+<h2 mat-dialog-title>Todo Detail</h2>
 <ng-container *ngTemplateOutlet="warningMessages"></ng-container>
 
 <form [formGroup]="fg" (ngSubmit)="onSubmit()">
@@ -17,6 +17,7 @@
       <input
         class="form-control"
         type="date"
+        min="{{ TODAYS_DATE }}"
         name="targetDate"
         formControlName="targetDate"
       />
@@ -37,13 +38,17 @@
   <button class="btn btn-success" type="submit">
     Save
   </button>
-  <button class="btn btn-default" type="button" (click)="onCancel()">
+  <button
+    class="btn btn-default float-right"
+    type="button"
+    (click)="onCancel()"
+  >
     Cancel
   </button>
 </form>
 
 <ng-template #warningMessages>
-  <div class="alert alert-warning" *ngIf="showMessage">
+  <div class="alert alert-warning" *ngIf="isFormInvalid()">
     {{ pickUpWarningMessage() }}
   </div>
 </ng-template>
