--- a/frontend/todo/src/app/login/login.component.html
+++ b/frontend/todo/src/app/login/login.component.html
@@ -9,13 +9,8 @@
     Password:
     <input type="password" name="password" formControlName="password" />
 
-    <button class="btn btn-success" (click)="handleBasicAuthLogin()">
+    <button class="btn btn-success" (click)="handleJWTAuthLogin()">
       Login
     </button>
   </form>
 </div>
-
-<!-- <input type="text" name="username" [(ngModel)]="username" /> Password:
-<input type="password" name="password" [(ngModel)]="password" />
-
-<button (click)="handleLogin()">Login</button> -->
